[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ReduXis"
version = "1.0"
description = "A supervised, CLI-based wrapper for s-SuStaIn enabling interpretable disease progression modeling with high-dimensional biomedical data."
readme = "README.md"
keywords = ["event-based modeling", "biomarker discovery", "disease progression", "omics-driven profiling", "multimodal data integration", "machine learning"]

authors = [
  { name="Leon Aksman", email="l.aksman@ucl.ac.uk" },
  { name="Raghav Tandon"},
  { name="Neel Sarkar"}
]
license = { text = "MIT" }
requires-python = ">=3.11"
classifiers = [
  "Intended Audience :: Science/Research",
  "Topic :: Scientific/Engineering",
  "Programming Language :: Python :: 3.11"
]
urls = { Homepage = "https://github.com/pathology-dynamics/ReduXis" }

dependencies = [
  "awkde @ git+https://github.com/noxtoby/awkde.git",
  "colorama>=0.4.6",
  "contourpy>=1.3.2",
  "cycler>=0.12.1",
  "dill>=0.4.0",
  "fonttools>=4.58.2",
  "future>=1.0.0",
  "imbalanced-learn>=0.13.0",
  "joblib>=1.5.1",
  "kde_ebm @ git+https://github.com/ucl-pond/kde_ebm.git",
  "kiwisolver>=1.4.8",
  "lightgbm>=4.6.0",
  "llvmlite>=0.44.0",
  "matplotlib>=3.10.3",
  "multiprocess>=0.70.18",
  "numba>=0.61.2",
  "numpy>=2.2.0",
  "packaging>=25.0",
  "pandas>=2.3.0",
  "pathos>=0.3.4",
  "pillow>=11.2.1",
  "pox>=0.3.6",
  "ppft>=1.7.7",
  "pybind11>=2.13.6",
  "pyparsing>=3.2.3",
  "python-dateutil>=2.9.0.post0",
  "pytz>=2025.2",
  "scikit-learn>=1.6.1",
  "scipy>=1.15.3",
  "seaborn>=0.13.2",
  "setuptools>=78.1.1",
  "six>=1.17.0",
  "threadpoolctl>=3.6.0",
  "tqdm>=4.67.1",
  "tzdata>=2025.2",
  "wheel>=0.45.1"
]

[tool.setuptools]
packages = ["sSuStaIn"]
zip-safe = false

[project.scripts]
reduxis = "sSuStaIn.reduxis:main"
